--- a/src/Styling.css
+++ b/src/Styling.css
@@ -1,5 +1,5 @@
 ul {
-    background-color: #333;
+    background-color: #52b79a;
     padding: 10px 0;
     text-align: center;
 }
@@ -43,13 +43,13 @@ ul a:hover {
 }
 
 body {
-    background-color: #333;
+    background-color: #52b79a;
     color: white; 
 }
 
 /* Cox note: demo move to Bootstrap */
 .custom-button {
-    background-color: #007bff;
+    background-color: blue;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -58,7 +58,7 @@ body {
 }
 
 footer {
-    background-color: #333;
+    background-color: #52b79a;
     color: #fff;
     padding: 20px 0;
     text-align: center;
