--- a/src/Styling.css
+++ b/src/Styling.css
@@ -30,6 +30,13 @@ ul a:hover {
     text-align: center;
 }
 
+.nav-link {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .container {
     display: flex;
     justify-content: space-between;
